--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,27 +22,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="50dp"
-        android:layout_height="43dp"
-        android:layout_marginTop="4dp"
-        android:background="#6750A3"
-        android:gravity="center_vertical"
-        android:text="test"
-        android:clickable="true"
-        android:onClick="testButton"
-        android:textColor="#FFFFFF"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button6"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:clickable="true"
+        android:gravity="center"
+        android:onClick="testButton"
         android:text="Name"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/textView6"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
@@ -58,18 +47,14 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:background="#6750A3"
+        android:textColor="#FFFFFF"
+        android:text="Add New Item"
+        android:clickable="true"
+        android:onClick="testButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add New Item"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
