--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/nameField"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Name"
@@ -37,6 +38,7 @@
 
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/emailField"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Email Address"
@@ -56,6 +58,7 @@
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordField"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Password"
@@ -64,7 +67,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/createAccountBtn"
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="180dp"
