--- a/app/src/main/res/layout/activity_sales_page.xml
+++ b/app/src/main/res/layout/activity_sales_page.xml
@@ -22,13 +22,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/userNameText"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
         android:clickable="true"
         android:gravity="center"
-        android:onClick="testButton"
         android:text="Name"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
