--- a/app/src/main/res/layout/activity_warehouse_add_item.xml
+++ b/app/src/main/res/layout/activity_warehouse_add_item.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UnusedStorePage">
+    tools:context=".WarehouseAddItem">
 
     <TextView
         android:id="@+id/textView10"
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:textSize="20sp"
-        android:text="Add Item To Store Storage"
+        android:text="Add Item To Warehouse's Storage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,16 +38,14 @@
         app:layout_constraintStart_toStartOf="@+id/itemName"
         app:layout_constraintTop_toBottomOf="@+id/itemName" />
 
-    <TextView
+    <EditText
         android:id="@+id/itemName"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="192dp"
-        android:drawableEnd="@drawable/arrow_down"
         android:ems="10"
-        android:hint="Select Item"
+        android:hint="Item name"
         android:inputType="text"
-        android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -68,7 +66,7 @@
         android:id="@+id/addItemBtn"
         android:layout_width="360dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="104dp"
+        android:layout_marginBottom="100dp"
         android:text="Add Item"
         android:textSize="18sp"
         android:textColor="@color/white"
@@ -78,7 +76,6 @@
         android:background="#66068C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
 
