--- a/app/src/main/res/layout/activity_sales_page.xml
+++ b/app/src/main/res/layout/activity_sales_page.xml
@@ -34,31 +34,40 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="Item Name"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/searchItem"
+        app:layout_constraintStart_toStartOf="@+id/searchItem" />
+
+    <TextView
         android:id="@+id/searchItem"
         android:layout_width="380dp"
         android:layout_height="40dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="120dp"
         android:clickable="true"
         android:drawableEnd="@drawable/arrow_down"
         android:gravity="center_vertical"
         android:hint="Select Item"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.483"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/itemQty"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:inputType="number"
         android:text="1"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/searchItem" />
 
@@ -66,14 +75,14 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="25dp"
         android:text="Quantity :"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/searchItem"
         app:layout_constraintTop_toBottomOf="@+id/searchItem" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/sellBtn"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_marginTop="160dp"
@@ -136,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="250dp"
-        android:text="Item Stock"
+        android:text="Item Storage"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
